crates/swc_ecma_parser/tests/test262-error-references/fail/2687d6d9043bd5cb.js.stderr
error: Invalid unicode code point
 --> $DIR/tests/test262-parser/fail/2687d6d9043bd5cb.js:1:5
  |
1 | "\u{}"
  |     ^

